<resources>
    <string name="app_name">DirectoryBrowser</string>
    <string name="action_settings">Settings</string>


    <string name="login_activity_title">Dropbox directory browser</string>
    <string name="login_activity_body">Manage your folders and files anywhere with our directory browser</string>
    <string name="login_activity_button_text">Sign in into your Dropbox account</string>
    <string name="directory_activity_error_download_file">An error has occurred trying to download the file, please try again</string>
    <string name="directory_activity_error_getting_file_folders">An error has occurred while getting your information, please try again</string>


    <string name="directory_empty_title_text">¡You don’t have any file here!</string>
    <string name="information_detail_title">FILE DETAILS</string>
    <string name="information_detail_name_title">Name</string>
    <string name="information_detail_type_title">File extension</string>
    <string name="information_detail_modification_title">Modified</string>
    <string name="information_detail_size_title">Size</string>
    <string name="information_detail_location_title">Path location</string>
    <string name="information_detail_downloadable_title">Is downloadable</string>

</resources>